...
            "state" : "needs_review",
            "value" : "Adductors"
          }
        }
      }
    },
    "Advanced" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Fortgeschritten"
          }
...
            "state" : "needs_review",
            "value" : "Barbell Squat"
          }
        }
      }
    },
    "Beginner" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Einsteiger"
          }
...
            "state" : "needs_review",
            "value" : "Horizontal Push"
          }
        }
      }
    },
    "Hypertrophy" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Hypertrophie"
          }
...
            "state" : "needs_review",
            "value" : "Intensification"
          }
        }
      }
    },
    "Intermediate" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Fortgeschrittene Grundlagen"
          }
...
            "state" : "needs_review",
            "value" : "Stop for pain, chest discomfort, or dizziness."
          }
        }
      }
    },
    "Strength" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "Kraft"
          }
...
